Convert py:percent to py:light format

--- a/BLcourse2.3/01_simple_gp_regression.ipynb
+++ b/BLcourse2.3/01_simple_gp_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8bc26c14",
+   "id": "16bd8a69",
    "metadata": {},
    "source": [
     "# Notation\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ef36e32",
+   "id": "87093c43",
    "metadata": {},
    "source": [
     "# Imports, helpers, setup"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86d69b2",
+   "id": "69a0af7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c543940",
+   "id": "eba6d895",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0674cc5a",
+   "id": "24e8765e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ddc32f",
+   "id": "9b980b1c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93822ff7",
+   "id": "a0a0c12c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3288a7ca",
+   "id": "e2778668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9348a1db",
+   "id": "eacc9f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2b5d326",
+   "id": "f90ce51c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7309ee3",
+   "id": "eb9ed01f",
    "metadata": {},
    "source": [
     "# Sample from the GP prior\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b26cd6",
+   "id": "894b7e36",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6758e47f",
+   "id": "33bf94f7",
    "metadata": {},
    "source": [
     "Let's investigate the samples more closely. A constant mean $\\ve m(\\ma X) =\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ae529a",
+   "id": "ff0dcbaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df46aa3f",
+   "id": "7018cb26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9350d8",
+   "id": "ea005dc2",
    "metadata": {},
    "source": [
     "# Fit GP to data: optimize hyper params\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "638d1244",
+   "id": "67b5961b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "777b67d9",
+   "id": "5faec1a4",
    "metadata": {},
    "source": [
     "# Run prediction\n",
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740fb21a",
+   "id": "e56fd041",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py:percent"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
