--- a/BLcourse2.2/Generating_MNIST_using_DDPMs.ipynb
+++ b/BLcourse2.2/Generating_MNIST_using_DDPMs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-23T07:34:53.034694Z",
@@ -46,6 +46,8 @@
    "metadata": {},
    "source": [
     "# UNet Model\n",
+    "\n",
+    "Materials are taken from https://learnopencv.com/denoising-diffusion-probabilistic-models/ and https://github.com/spmallick/learnopencv/blob/master/Guide-to-training-DDPMs-from-Scratch/Generating_MNIST_using_DDPMs.ipynb\n",
     "\n",
     "In DDPMs, the authors use a UNet-shaped deep neural network which takes in as input:\n",
     "\n",
@@ -2009,9 +2011,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sc_venv_template",
+   "display_name": "sc_venv_bayes2",
    "language": "python",
-   "name": "sc_venv_template"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
