Add ipynb files

--- a/BLcourse2.3/01_one_dim.ipynb
+++ b/BLcourse2.3/01_one_dim.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16bd8a69",
+   "id": "5ece8acf",
    "metadata": {},
    "source": [
     "# Notation\n",
     "$\\newcommand{\\ve}[1]{\\mathit{\\boldsymbol{#1}}}$\n",
     "$\\newcommand{\\ma}[1]{\\mathbf{#1}}$\n",
-    "$\\newcommand{\\pred}[1]{\\widehat{#1}}$\n",
+    "$\\newcommand{\\pred}[1]{\\rm{#1}}$\n",
+    "$\\newcommand{\\predve}[1]{\\mathbf{#1}}$\n",
     "$\\newcommand{\\cov}{\\mathrm{cov}}$\n",
+    "$\\newcommand{\\test}[1]{#1_*}$\n",
+    "$\\newcommand{\\testtest}[1]{#1_{**}}$\n",
     "\n",
     "Vector $\\ve a\\in\\mathbb R^n$ or $\\mathbb R^{n\\times 1}$, so \"column\" vector.\n",
     "Matrix $\\ma A\\in\\mathbb R^{n\\times m}$. Design matrix with input vectors $\\ve\n",
@@ -23,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87093c43",
+   "id": "71f86676",
    "metadata": {},
    "source": [
     "# Imports, helpers, setup"
@@ -32,12 +35,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a0af7f",
+   "id": "8c581079",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
+    "##%matplotlib notebook\n",
+    "##%matplotlib widget\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f89a0c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import math\n",
     "from collections import defaultdict\n",
     "from pprint import pprint\n",
@@ -47,43 +60,7 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import is_interactive\n",
     "\n",
-    "\n",
-    "def extract_model_params(model, raw=False) -> dict:\n",
-    "    \"\"\"Helper to convert model.named_parameters() to dict.\n",
-    "\n",
-    "    With raw=True, use\n",
-    "        foo.bar.raw_param\n",
-    "    else\n",
-    "        foo.bar.param\n",
-    "\n",
-    "    See https://docs.gpytorch.ai/en/stable/examples/00_Basic_Usage/Hyperparameters.html#Raw-vs-Actual-Parameters\n",
-    "    \"\"\"\n",
-    "    if raw:\n",
-    "        return dict(\n",
-    "            (p_name, p_val.item())\n",
-    "            for p_name, p_val in model.named_parameters()\n",
-    "        )\n",
-    "    else:\n",
-    "        out = dict()\n",
-    "        # p_name = 'covar_module.base_kernel.raw_lengthscale'. Access\n",
-    "        # model.covar_module.base_kernel.lengthscale (w/o the raw_)\n",
-    "        for p_name, p_val in model.named_parameters():\n",
-    "            # Yes, eval() hack. Sorry.\n",
-    "            p_name = p_name.replace(\".raw_\", \".\")\n",
-    "            p_val = eval(f\"model.{p_name}\")\n",
-    "            out[p_name] = p_val.item()\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "def plot_samples(ax, X_pred, samples, label=None, **kwds):\n",
-    "    plot_kwds = dict(color=\"tab:green\", alpha=0.3)\n",
-    "    plot_kwds.update(kwds)\n",
-    "\n",
-    "    if label is None:\n",
-    "        ax.plot(X_pred, samples.T, **plot_kwds)\n",
-    "    else:\n",
-    "        ax.plot(X_pred, samples[0, :], **plot_kwds, label=label)\n",
-    "        ax.plot(X_pred, samples[1:, :].T, **plot_kwds, label=\"_\")\n",
+    "from utils import extract_model_params, plot_samples\n",
     "\n",
     "\n",
     "# Default float32 results in slightly noisy prior samples. Less so with\n",
@@ -105,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eba6d895",
+   "id": "97e05998",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -122,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e8765e",
+   "id": "06c7e542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b980b1c",
+   "id": "28539d2a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -161,10 +138,10 @@
     "likelihood. The kernel is the squared exponential kernel with a scaling\n",
     "factor.\n",
     "\n",
-    "$$\\kappa(\\ve x_i, \\ve x_j) = \\sigma_f\\,\\exp\\left(-\\frac{\\lVert\\ve x_i - \\ve x_j\\rVert_2^2}{2\\,\\ell^2}\\right)$$\n",
+    "$$\\kappa(\\ve x_i, \\ve x_j) = s\\,\\exp\\left(-\\frac{\\lVert\\ve x_i - \\ve x_j\\rVert_2^2}{2\\,\\ell^2}\\right)$$\n",
     "\n",
     "This makes two hyper params, namely the length scale $\\ell$ and the scaling\n",
-    "$\\sigma_f$. The latter is implemented by wrapping the `RBFKernel` with\n",
+    "$s$. The latter is implemented by wrapping the `RBFKernel` with\n",
     "`ScaleKernel`.\n",
     "\n",
     "In addition, we define a constant mean via `ConstantMean`. Finally we have\n",
@@ -172,14 +149,14 @@
     "\n",
     "* $\\ell$ = `model.covar_module.base_kernel.lengthscale`\n",
     "* $\\sigma_n^2$ = `model.likelihood.noise_covar.noise`\n",
-    "* $\\sigma_f$ = `model.covar_module.outputscale`\n",
+    "* $s$ = `model.covar_module.outputscale`\n",
     "* $m(\\ve x) = c$ = `model.mean_module.constant`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a0c12c",
+   "id": "84c29689",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -203,6 +180,7 @@
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
+    "        \"\"\"The prior, defined in terms of the mean and covariance function.\"\"\"\n",
     "        mean_x = self.mean_module(x)\n",
     "        covar_x = self.covar_module(x)\n",
     "        return gpytorch.distributions.MultivariateNormal(mean_x, covar_x)\n",
@@ -215,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2778668",
+   "id": "ce3d687b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacc9f2b",
+   "id": "332904ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90ce51c",
+   "id": "5142e002",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -254,22 +232,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9ed01f",
+   "id": "2c09f48a",
    "metadata": {},
    "source": [
     "# Sample from the GP prior\n",
     "\n",
     "We sample a number of functions $f_j, j=1,\\ldots,M$ from the GP prior and\n",
-    "evaluate them at all $\\ma X$ = `X_pred` points, of which we have $N'=200$. So\n",
-    "we effectively generate samples from $p(\\pred{\\ve y}|\\ma X) = \\mathcal N(\\ve\n",
-    "c, \\ma K)$. Each sampled vector $\\pred{\\ve y}\\in\\mathbb R^{N'}$ and the\n",
-    "covariance (kernel) matrix is $\\ma K\\in\\mathbb R^{N'\\times N'}$."
+    "evaluate them at all $\\ma X$ = `X_pred` points, of which we have $N=200$. So\n",
+    "we effectively generate samples from $p(\\predve f|\\ma X) = \\mathcal N(\\ve\n",
+    "c, \\ma K)$. Each sampled vector $\\predve f\\in\\mathbb R^{N}$ and the\n",
+    "covariance (kernel) matrix is $\\ma K\\in\\mathbb R^{N\\times N}$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894b7e36",
+   "id": "9d766f10",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -305,11 +283,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33bf94f7",
+   "id": "e31330a2",
    "metadata": {},
    "source": [
     "Let's investigate the samples more closely. A constant mean $\\ve m(\\ma X) =\n",
-    "\\ve c$ does *not* mean that each sampled vector $\\pred{\\ve y}$'s mean is\n",
+    "\\ve c$ does *not* mean that each sampled vector $\\predve f$'s mean is\n",
     "equal to $c$. Instead, we have that at each $\\ve x_i$, the mean of\n",
     "*all* sampled functions is the same, so $\\frac{1}{M}\\sum_{j=1}^M f_j(\\ve x_i)\n",
     "\\approx c$ and for $M\\rightarrow\\infty$ it will be exactly $c$.\n"
@@ -318,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff0dcbaa",
+   "id": "e2372d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7018cb26",
+   "id": "cb1d5d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea005dc2",
+   "id": "9db57693",
    "metadata": {},
    "source": [
     "# Fit GP to data: optimize hyper params\n",
@@ -366,10 +344,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67b5961b",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "58266bb8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train mode\n",
@@ -390,8 +366,16 @@
     "        print(f\"iter {ii+1}/{n_iter}, {loss=:.3f}\")\n",
     "    for p_name, p_val in extract_model_params(model).items():\n",
     "        history[p_name].append(p_val)\n",
-    "    history[\"loss\"].append(loss.item())\n",
-    "\n",
+    "    history[\"loss\"].append(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc3092c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot hyper params and loss (neg. log marginal likelihood) convergence\n",
     "ncols = len(history)\n",
     "fig, axs = plt.subplots(ncols=ncols, nrows=1, figsize=(ncols * 5, 5))\n",
@@ -402,29 +386,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "030d1fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Values of optimized hyper params\n",
+    "pprint(extract_model_params(model, raw=False))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5faec1a4",
+   "id": "bb0c1621",
    "metadata": {},
    "source": [
     "# Run prediction\n",
     "\n",
     "We show \"noiseless\" (left: $\\sigma = \\sqrt{\\mathrm{diag}(\\ma\\Sigma)}$) vs.\n",
     "\"noisy\" (right: $\\sigma = \\sqrt{\\mathrm{diag}(\\ma\\Sigma + \\sigma_n^2\\,\\ma\n",
-    "I_N)}$) predictions, where $\\ma\\Sigma\\equiv\\cov(\\ve f_*)$ is the posterior\n",
-    "predictive covariance matrix from R&W 2006 eq. 2.24 with $\\ma K = K(X,X)$,\n",
-    "$\\ma K'=K(X_*, X)$ and $\\ma K''=K(X_*, X_*)$, so\n",
+    "I_N)}$) predictions with\n",
     "\n",
-    "$$\\ma\\Sigma = \\ma K'' - \\ma K'\\,(\\ma K+\\sigma_n^2\\,\\ma I)^{-1}\\,\\ma K'^\\top$$\n",
+    "$$\\ma\\Sigma = \\testtest{\\ma K} - \\test{\\ma K}\\,(\\ma K+\\sigma_n^2\\,\\ma I)^{-1}\\,\\test{\\ma K}^\\top$$\n",
     "\n",
-    "See\n",
-    "https://elcorto.github.io/gp_playground/content/gp_pred_comp/notebook_plot.html\n",
-    "for details."
+    "We find that $\\ma\\Sigma$ reflects behavior we would like to see from\n",
+    "epistemic uncertainty -- it is high when we have no data\n",
+    "(out-of-distribution). But this alone isn't the whole story. We need to add\n",
+    "the estimated noise level $\\sigma_n^2$ in order for the confidence band to\n",
+    "cover the data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e56fd041",
+   "id": "5821ae0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +432,10 @@
     "    post_pred_y = likelihood(model(X_pred))\n",
     "\n",
     "    fig, axs = plt.subplots(ncols=2, figsize=(12, 5))\n",
-    "    for ii, (ax, post_pred) in enumerate(zip(axs, [post_pred_f, post_pred_y])):\n",
+    "    fig_sigmas, ax_sigmas = plt.subplots()\n",
+    "    for ii, (ax, post_pred, name) in enumerate(\n",
+    "        zip(axs, [post_pred_f, post_pred_y], [\"f\", \"y\"])\n",
+    "    ):\n",
     "        yf_mean = post_pred.mean\n",
     "        yf_samples = post_pred.sample(sample_shape=torch.Size((10,)))\n",
     "\n",
@@ -467,6 +465,23 @@
     "            color=\"tab:orange\",\n",
     "            alpha=0.3,\n",
     "        )\n",
+    "        if name == \"f\":\n",
+    "            sigma_label = r\"$\\pm 2\\sqrt{\\mathrm{diag}(\\Sigma)}$\"\n",
+    "            zorder = 1\n",
+    "        else:\n",
+    "            sigma_label = (\n",
+    "                r\"$\\pm 2\\sqrt{\\mathrm{diag}(\\Sigma + \\sigma_n^2\\,I)}$\"\n",
+    "            )\n",
+    "            zorder = 0\n",
+    "        ax_sigmas.fill_between(\n",
+    "            X_pred.numpy(),\n",
+    "            lower.numpy(),\n",
+    "            upper.numpy(),\n",
+    "            label=\"confidence \" + sigma_label,\n",
+    "            color=\"tab:orange\" if name == \"f\" else \"tab:blue\",\n",
+    "            alpha=0.5,\n",
+    "            zorder=zorder,\n",
+    "        )\n",
     "        y_min = y_train.min()\n",
     "        y_max = y_train.max()\n",
     "        y_span = y_max - y_min\n",
@@ -474,6 +489,7 @@
     "        plot_samples(ax, X_pred, yf_samples, label=\"posterior pred. samples\")\n",
     "        if ii == 1:\n",
     "            ax.legend()\n",
+    "    ax_sigmas.legend()\n",
     "\n",
     "# When running as script\n",
     "if not is_interactive():\n",
