Update ipynb files

--- a/BLcourse2.3/01_one_dim.ipynb
+++ b/BLcourse2.3/01_one_dim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ece8acf",
+   "id": "2a8ed8ae",
    "metadata": {},
    "source": [
     "# Notation\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71f86676",
+   "id": "ae440984",
    "metadata": {},
    "source": [
     "# Imports, helpers, setup"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c581079",
+   "id": "25b39064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f89a0c6",
+   "id": "960de85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e05998",
+   "id": "7a41bb4f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c7e542",
+   "id": "30019345",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28539d2a",
+   "id": "7d326cde",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c29689",
+   "id": "0ce2844b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3d687b",
+   "id": "d8a2aab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "332904ac",
+   "id": "0a3989c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5142e002",
+   "id": "5c3808b3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c09f48a",
+   "id": "c3600af3",
    "metadata": {},
    "source": [
     "# Sample from the GP prior\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d766f10",
+   "id": "e74b8d1b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31330a2",
+   "id": "0598b567",
    "metadata": {},
    "source": [
     "Let's investigate the samples more closely. A constant mean $\\ve m(\\ma X) =\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2372d76",
+   "id": "6d7fa03e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1d5d14",
+   "id": "20b6e415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,14 +324,84 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db57693",
+   "id": "25b90532",
+   "metadata": {},
+   "source": [
+    "# GP posterior predictive distribution with fixed hyper params\n",
+    "\n",
+    "Now we calculate the posterior predictive distribution $p(\\test{\\predve\n",
+    "f}|\\test{\\ma X}, \\ma X, \\ve y)$, i.e. we condition on the train data (Bayesian\n",
+    "inference).\n",
+    "\n",
+    "We use the fixed hyper param values defined above. In particular, since\n",
+    "$\\sigma_n^2$ = `model.likelihood.noise_covar.noise` is > 0, we have a\n",
+    "regression setting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d01951f1",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# Evaluation (predictive posterior) mode\n",
+    "model.eval()\n",
+    "likelihood.eval()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    M = 10\n",
+    "    post_pred_f = model(X_pred)\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    f_mean = post_pred_f.mean\n",
+    "    f_samples = post_pred_f.sample(sample_shape=torch.Size((M,)))\n",
+    "    f_std = post_pred_f.stddev\n",
+    "    lower = f_mean - 2 * f_std\n",
+    "    upper = f_mean + 2 * f_std\n",
+    "    ax.plot(\n",
+    "        X_train.numpy(),\n",
+    "        y_train.numpy(),\n",
+    "        \"o\",\n",
+    "        label=\"data\",\n",
+    "        color=\"tab:blue\",\n",
+    "    )\n",
+    "    ax.plot(\n",
+    "        X_pred.numpy(),\n",
+    "        f_mean.numpy(),\n",
+    "        label=\"mean\",\n",
+    "        color=\"tab:red\",\n",
+    "        lw=2,\n",
+    "    )\n",
+    "    ax.fill_between(\n",
+    "        X_pred.numpy(),\n",
+    "        lower.numpy(),\n",
+    "        upper.numpy(),\n",
+    "        label=\"confidence\",\n",
+    "        color=\"tab:orange\",\n",
+    "        alpha=0.3,\n",
+    "    )\n",
+    "    y_min = y_train.min()\n",
+    "    y_max = y_train.max()\n",
+    "    y_span = y_max - y_min\n",
+    "    ax.set_ylim([y_min - 0.3 * y_span, y_max + 0.3 * y_span])\n",
+    "    plot_samples(ax, X_pred, f_samples, label=\"posterior pred. samples\")\n",
+    "    ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b960a745",
    "metadata": {},
    "source": [
     "# Fit GP to data: optimize hyper params\n",
     "\n",
     "In each step of the optimizer, we condition on the training data (e.g. do\n",
-    "Bayesian inference) to calculate the weight posterior for the current values\n",
-    "of the hyper params.\n",
+    "Bayesian inference) to calculate the posterior predictive distribution for\n",
+    "the current values of the hyper params. We iterate until the log marginal\n",
+    "likelihood is converged.\n",
     "\n",
     "We use a simplistic PyTorch-style hand written train loop without convergence\n",
     "control, so make sure to use enough `n_iter` and eyeball-check that the loss\n",
@@ -344,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58266bb8",
+   "id": "dc059dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc3092c",
+   "id": "7c9e7052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "030d1fc8",
+   "id": "eb1fe908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0c1621",
+   "id": "98aefb90",
    "metadata": {},
    "source": [
     "# Run prediction\n",
@@ -419,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5821ae0f",
+   "id": "a78de0e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +498,7 @@
     "likelihood.eval()\n",
     "\n",
     "with torch.no_grad():\n",
+    "    M = 10\n",
     "    post_pred_f = model(X_pred)\n",
     "    post_pred_y = likelihood(model(X_pred))\n",
     "\n",
@@ -437,9 +508,8 @@
     "        zip(axs, [post_pred_f, post_pred_y], [\"f\", \"y\"])\n",
     "    ):\n",
     "        yf_mean = post_pred.mean\n",
-    "        yf_samples = post_pred.sample(sample_shape=torch.Size((10,)))\n",
+    "        yf_samples = post_pred.sample(sample_shape=torch.Size((M,)))\n",
     "\n",
-    "        ##lower, upper = post_pred.confidence_region()\n",
     "        yf_std = post_pred.stddev\n",
     "        lower = yf_mean - 2 * yf_std\n",
     "        upper = yf_mean + 2 * yf_std\n",
@@ -489,8 +559,16 @@
     "        plot_samples(ax, X_pred, yf_samples, label=\"posterior pred. samples\")\n",
     "        if ii == 1:\n",
     "            ax.legend()\n",
-    "    ax_sigmas.legend()\n",
-    "\n",
+    "    ax_sigmas.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e726d3d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# When running as script\n",
     "if not is_interactive():\n",
     "    plt.show()"
