--- a/BLcourse2.3/02_two_dim.ipynb
+++ b/BLcourse2.3/02_two_dim.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cc3b0fe",
+   "id": "b88a37d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194927e4",
+   "id": "64c21c28",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -28,18 +28,17 @@
     "import gpytorch\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import is_interactive\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy as np\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "from utils import extract_model_params, plot_samples, fig_ax_3d"
+    "from utils import extract_model_params, fig_ax_3d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44d9d58d",
+   "id": "71da09db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa6e6bd",
+   "id": "e5786965",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -60,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0d40c6",
+   "id": "ee7a8e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87f84642",
+   "id": "0058371a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158c3da2",
+   "id": "3523c08d",
    "metadata": {},
    "source": [
     "# Exercise 1"
@@ -150,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9e4ee1",
+   "id": "0ec4ad3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "197f7480",
+   "id": "f4592094",
    "metadata": {},
    "source": [
     "# Exercise 2"
@@ -169,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f1ba561",
+   "id": "6bec0f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b080da",
+   "id": "865866ea",
    "metadata": {},
    "source": [
     "# Exercise 3"
@@ -188,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e9779e",
+   "id": "5132eaeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3f0b5d7",
+   "id": "6efe09b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6b3548",
+   "id": "af637911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30dbecca",
+   "id": "eab0f4fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d27ef1",
+   "id": "a00bf4e4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -268,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6da6f37a",
+   "id": "52834c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50695462",
+   "id": "1fcef3dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393a458d",
+   "id": "25397c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ce5bf2",
+   "id": "a94067cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ccbafa",
+   "id": "a5b1a9ee",
    "metadata": {},
    "source": [
     "# Fit GP to data: optimize hyper params"
@@ -349,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44f3667",
+   "id": "c15e6d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ff9c36",
+   "id": "0c7a4643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6c9c1b2",
+   "id": "5efa3b9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b01dac44",
+   "id": "898f74f7",
    "metadata": {},
    "source": [
     "# Run prediction"
@@ -411,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb6926d",
+   "id": "59e18623",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a354f60",
+   "id": "591e453d",
    "metadata": {},
    "source": [
     "# Plot difference to ground truth and uncertainty"
@@ -457,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3570739",
+   "id": "a7f294c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfc86ee",
+   "id": "04257cea",
    "metadata": {},
    "source": [
     "# Check learned noise"
@@ -518,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad91b3b",
+   "id": "9d966f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18e5a5ee",
+   "id": "1da209ff",
    "metadata": {},
    "source": [
     "# Plot confidence bands"
@@ -542,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46c9aab5",
+   "id": "7f56936d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81788c9d",
+   "id": "d25b4506",
    "metadata": {},
    "outputs": [],
    "source": [
