gp: use matplotlib widget mode

--- a/BLcourse2.3/02_two_dim.ipynb
+++ b/BLcourse2.3/02_two_dim.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "##%matplotlib widget\n",
+    "##%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "##%matplotlib inline"
    ]
   },
