--- a/BLcourse2.3/01_one_dim.ipynb
+++ b/BLcourse2.3/01_one_dim.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "##%matplotlib notebook\n",
-    "##%matplotlib widget\n",
-    "%matplotlib inline"
+    "%matplotlib widget\n",
+    "##%matplotlib inline"
    ]
   },
   {
